On Tree Construct and Traverse.

--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -67,15 +67,24 @@
     <ClCompile Include="..\src\Add_Binary.cpp" />
     <ClCompile Include="..\src\Add_Two_Numbers.cpp" />
     <ClCompile Include="..\src\Anagrams.cpp" />
+    <ClCompile Include="..\src\Balanced_Binary_Tree.cpp" />
     <ClCompile Include="..\src\Best_Time_to_Buy_and_Sell_Stock.cpp" />
     <ClCompile Include="..\src\Best_Time_to_Buy_and_Sell_Stock_II.cpp" />
     <ClCompile Include="..\src\Best_Time_to_Buy_and_Sell_Stock_III.cpp" />
+    <ClCompile Include="..\src\Binary_Tree_Inorder_Traversal.cpp" />
+    <ClCompile Include="..\src\Binary_Tree_Level_Order_Traversal.cpp" />
+    <ClCompile Include="..\src\Binary_Tree_Level_Order_Traversal_II.cpp" />
+    <ClCompile Include="..\src\Binary_Tree_Postorder_Traversal.cpp" />
+    <ClCompile Include="..\src\Binary_Tree_Preorder_Traversal.cpp" />
+    <ClCompile Include="..\src\Binary_Tree_Zigzag_Level_Order_Traversal.cpp" />
     <ClCompile Include="..\src\Candy.cpp" />
     <ClCompile Include="..\src\Climbing_Stairs.cpp" />
     <ClCompile Include="..\src\Clone_Graph.cpp" />
     <ClCompile Include="..\src\Combinations.cpp" />
     <ClCompile Include="..\src\Combination_Sum.cpp" />
     <ClCompile Include="..\src\Combination_Sum_II.cpp" />
+    <ClCompile Include="..\src\Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal.cpp" />
+    <ClCompile Include="..\src\Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal.cpp" />
     <ClCompile Include="..\src\Container_With_Most_Water.cpp" />
     <ClCompile Include="..\src\Copy_List_with_Random_Pointer.cpp" />
     <ClCompile Include="..\src\Count_and_Say.cpp" />
@@ -84,6 +93,7 @@
     <ClCompile Include="..\src\Edit_Distance.cpp" />
     <ClCompile Include="..\src\Evaluate_Reverse_Polish_Notation.cpp" />
     <ClCompile Include="..\src\First_Missing_Positive.cpp" />
+    <ClCompile Include="..\src\Flatten_Binary_Tree_to_Linked_List.cpp" />
     <ClCompile Include="..\src\Gas_Station.cpp" />
     <ClCompile Include="..\src\Generate_Parentheses.cpp" />
     <ClCompile Include="..\src\Gray_Code.cpp" />
@@ -124,7 +134,10 @@
     <ClCompile Include="..\src\Permutations_II.cpp" />
     <ClCompile Include="..\src\Permutation_Sequence.cpp" />
     <ClCompile Include="..\src\Plus_One.cpp" />
+    <ClCompile Include="..\src\Populating_Next_Right_Pointers_in_Each_Node.cpp" />
+    <ClCompile Include="..\src\Populating_Next_Right_Pointers_in_Each_Node_II.cpp" />
     <ClCompile Include="..\src\Pow(x, n).cpp" />
+    <ClCompile Include="..\src\Recover_Binary_Search_Tree.cpp" />
     <ClCompile Include="..\src\Regular_Expression_Matching.cpp" />
     <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_Array.cpp" />
     <ClCompile Include="..\src\Remove_Duplicates_from_Sorted_Array_II.cpp" />
@@ -140,6 +153,7 @@
     <ClCompile Include="..\src\Roman_to_Integer.cpp" />
     <ClCompile Include="..\src\Rotate_Image.cpp" />
     <ClCompile Include="..\src\Rotate_List.cpp" />
+    <ClCompile Include="..\src\Same_Tree.cpp" />
     <ClCompile Include="..\src\Scramble_String.cpp" />
     <ClCompile Include="..\src\Search_a_2D_Matrix.cpp" />
     <ClCompile Include="..\src\Search_for_a_Range.cpp" />
@@ -159,6 +173,7 @@
     <ClCompile Include="..\src\Sudoku_Solver.cpp" />
     <ClCompile Include="..\src\Surrounded_Regions.cpp" />
     <ClCompile Include="..\src\Swap_Nodes_in_Pairs.cpp" />
+    <ClCompile Include="..\src\Symmetric_Tree.cpp" />
     <ClCompile Include="..\src\Trapping_Rain_Water.cpp" />
     <ClCompile Include="..\src\Triangle.cpp" />
     <ClCompile Include="..\src\Two_Sum.cpp" />
