--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -74,6 +74,7 @@
     <ClCompile Include="..\src\Binary_Tree_Inorder_Traversal.cpp" />
     <ClCompile Include="..\src\Binary_Tree_Level_Order_Traversal.cpp" />
     <ClCompile Include="..\src\Binary_Tree_Level_Order_Traversal_II.cpp" />
+    <ClCompile Include="..\src\Binary_Tree_Maximum_Path_Sum.cpp" />
     <ClCompile Include="..\src\Binary_Tree_Postorder_Traversal.cpp" />
     <ClCompile Include="..\src\Binary_Tree_Preorder_Traversal.cpp" />
     <ClCompile Include="..\src\Binary_Tree_Zigzag_Level_Order_Traversal.cpp" />
@@ -86,6 +87,8 @@
     <ClCompile Include="..\src\Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal.cpp" />
     <ClCompile Include="..\src\Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal.cpp" />
     <ClCompile Include="..\src\Container_With_Most_Water.cpp" />
+    <ClCompile Include="..\src\Convert_Sorted_Array_to_Binary_Search_Tree.cpp" />
+    <ClCompile Include="..\src\Convert_Sorted_List_to_Binary_Search_Tree.cpp" />
     <ClCompile Include="..\src\Copy_List_with_Random_Pointer.cpp" />
     <ClCompile Include="..\src\Count_and_Say.cpp" />
     <ClCompile Include="..\src\Decode_Ways.cpp" />
@@ -116,10 +119,12 @@
     <ClCompile Include="..\src\Longest_Valid_Parentheses.cpp" />
     <ClCompile Include="..\src\LRU_Cache.cpp" />
     <ClCompile Include="..\src\Maximal_Rectangle.cpp" />
+    <ClCompile Include="..\src\Maximum_Depth_of_Binary_Tree.cpp" />
     <ClCompile Include="..\src\Maximum_Subarray.cpp" />
     <ClCompile Include="..\src\Merge_k_Sorted_Lists.cpp" />
     <ClCompile Include="..\src\Merge_Sorted_Array.cpp" />
     <ClCompile Include="..\src\Merge_Two_Sorted_Lists.cpp" />
+    <ClCompile Include="..\src\Minimum_Depth_of_Binary_Tree.cpp" />
     <ClCompile Include="..\src\Minimum_Path_Sum.cpp" />
     <ClCompile Include="..\src\N-Queens.cpp" />
     <ClCompile Include="..\src\N-Queens_II.cpp" />
@@ -130,6 +135,8 @@
     <ClCompile Include="..\src\Partition_List.cpp" />
     <ClCompile Include="..\src\Pascal%27s_Triangle.cpp" />
     <ClCompile Include="..\src\Pascal%27s_Triangle_II.cpp" />
+    <ClCompile Include="..\src\Path_Sum.cpp" />
+    <ClCompile Include="..\src\Path_Sum_II.cpp" />
     <ClCompile Include="..\src\Permutations.cpp" />
     <ClCompile Include="..\src\Permutations_II.cpp" />
     <ClCompile Include="..\src\Permutation_Sequence.cpp" />
@@ -171,14 +178,18 @@
     <ClCompile Include="..\src\Subsets.cpp" />
     <ClCompile Include="..\src\Subsets_II.cpp" />
     <ClCompile Include="..\src\Sudoku_Solver.cpp" />
+    <ClCompile Include="..\src\Sum_Root_to_Leaf_Numbers.cpp" />
     <ClCompile Include="..\src\Surrounded_Regions.cpp" />
     <ClCompile Include="..\src\Swap_Nodes_in_Pairs.cpp" />
     <ClCompile Include="..\src\Symmetric_Tree.cpp" />
     <ClCompile Include="..\src\Trapping_Rain_Water.cpp" />
     <ClCompile Include="..\src\Triangle.cpp" />
     <ClCompile Include="..\src\Two_Sum.cpp" />
+    <ClCompile Include="..\src\Unique_Binary_Search_Trees.cpp" />
+    <ClCompile Include="..\src\Unique_Binary_Search_Trees_II.cpp" />
     <ClCompile Include="..\src\Unique_Paths.cpp" />
     <ClCompile Include="..\src\Unique_Paths_II.cpp" />
+    <ClCompile Include="..\src\Validate_Binary_Search_Tree.cpp" />
     <ClCompile Include="..\src\Valid_Number.cpp" />
     <ClCompile Include="..\src\Valid_Palindrome.cpp" />
     <ClCompile Include="..\src\Valid_Parentheses.cpp" />
