--- a/project/MyLeetCode.vcxproj
+++ b/project/MyLeetCode.vcxproj
@@ -158,6 +158,7 @@
     <ClCompile Include="..\src\Reverse_Integer.cpp" />
     <ClCompile Include="..\src\Reverse_Linked_List_II.cpp" />
     <ClCompile Include="..\src\Reverse_Nodes_in_k-Group.cpp" />
+    <ClCompile Include="..\src\Reverse_Words_in_a_String.cpp" />
     <ClCompile Include="..\src\Roman_to_Integer.cpp" />
     <ClCompile Include="..\src\Rotate_Image.cpp" />
     <ClCompile Include="..\src\Rotate_List.cpp" />
