--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -108,6 +108,8 @@
     <ClCompile Include="..\..\src\Insert_Interval.cpp" />
     <ClCompile Include="..\..\src\Integer_to_Roman.cpp" />
     <ClCompile Include="..\..\src\Interleaving_String.cpp" />
+    <ClCompile Include="..\..\src\Intersection_of_Two_Arrays.cpp" />
+    <ClCompile Include="..\..\src\Intersection_of_Two_Arrays_II.cpp" />
     <ClCompile Include="..\..\src\Intersection_of_Two_Linked_Lists.cpp" />
     <ClCompile Include="..\..\src\Jump_Game.cpp" />
     <ClCompile Include="..\..\src\Jump_Game_II.cpp" />
@@ -173,6 +175,7 @@
     <ClCompile Include="..\..\src\Reverse_Linked_List_II.cpp" />
     <ClCompile Include="..\..\src\Reverse_Nodes_in_k-Group.cpp" />
     <ClCompile Include="..\..\src\Reverse_String.cpp" />
+    <ClCompile Include="..\..\src\Reverse_Vowels_of_a_String.cpp" />
     <ClCompile Include="..\..\src\Reverse_Words_in_a_String.cpp" />
     <ClCompile Include="..\..\src\Roman_to_Integer.cpp" />
     <ClCompile Include="..\..\src\Rotate_Image.cpp" />
