Today's share on sorting.

--- a/project/VS2010/MyLeetCode.vcxproj.filters
+++ b/project/VS2010/MyLeetCode.vcxproj.filters
@@ -564,6 +564,12 @@
     <ClCompile Include="..\..\src\Maximum_Gap.cpp">
       <Filter>Source\Sorting</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\H-Index.cpp">
+      <Filter>Source\Sorting</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Wiggle_Sort_II.cpp">
+      <Filter>Source\Sorting</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\include.h" />
