--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -104,6 +104,7 @@
     <ClCompile Include="..\..\src\Gas_Station.cpp" />
     <ClCompile Include="..\..\src\Generate_Parentheses.cpp" />
     <ClCompile Include="..\..\src\Gray_Code.cpp" />
+    <ClCompile Include="..\..\src\H-Index.cpp" />
     <ClCompile Include="..\..\src\Implement_strStr[].cpp" />
     <ClCompile Include="..\..\src\Insertion_Sort_List.cpp" />
     <ClCompile Include="..\..\src\Insert_Interval.cpp" />
@@ -221,6 +222,7 @@
     <ClCompile Include="..\..\src\Valid_Palindrome.cpp" />
     <ClCompile Include="..\..\src\Valid_Parentheses.cpp" />
     <ClCompile Include="..\..\src\Valid_Sudoku.cpp" />
+    <ClCompile Include="..\..\src\Wiggle_Sort_II.cpp" />
     <ClCompile Include="..\..\src\Wildcard_Matching.cpp" />
     <ClCompile Include="..\..\src\Word_Break.cpp" />
     <ClCompile Include="..\..\src\Word_Break_II.cpp" />
