--- a/project/VS2010/MyLeetCode.vcxproj.filters
+++ b/project/VS2010/MyLeetCode.vcxproj.filters
@@ -570,6 +570,18 @@
     <ClCompile Include="..\..\src\Wiggle_Sort_II.cpp">
       <Filter>Source\Sorting</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\Binary_Search_Tree_Iterator.cpp">
+      <Filter>Source\Tree\Binary Search Tree</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Binary_Tree_Right_Side_View.cpp">
+      <Filter>Source\Tree\Traverse</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Count_Complete_Tree_Nodes.cpp">
+      <Filter>Source\Tree\Traverse</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Invert_Binary_Tree.cpp">
+      <Filter>Source\Tree\Recursion</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\include.h" />
