--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -78,6 +78,7 @@
     <ClCompile Include="..\..\src\Binary_Tree_Level_Order_Traversal.cpp" />
     <ClCompile Include="..\..\src\Binary_Tree_Level_Order_Traversal_II.cpp" />
     <ClCompile Include="..\..\src\Binary_Tree_Maximum_Path_Sum.cpp" />
+    <ClCompile Include="..\..\src\Binary_Tree_Paths.cpp" />
     <ClCompile Include="..\..\src\Binary_Tree_Postorder_Traversal.cpp" />
     <ClCompile Include="..\..\src\Binary_Tree_Preorder_Traversal.cpp" />
     <ClCompile Include="..\..\src\Binary_Tree_Right_Side_View.cpp" />
@@ -132,6 +133,7 @@
     <ClCompile Include="..\..\src\Longest_Substring_Without_Repeating_Characters.cpp" />
     <ClCompile Include="..\..\src\Longest_Valid_Parentheses.cpp" />
     <ClCompile Include="..\..\src\Lowest_Common_Ancestor_of_a_Binary_Search_Tree.cpp" />
+    <ClCompile Include="..\..\src\Lowest_Common_Ancestor_of_a_Binary_Tree.cpp" />
     <ClCompile Include="..\..\src\LRU_Cache.cpp" />
     <ClCompile Include="..\..\src\Maximal_Rectangle.cpp" />
     <ClCompile Include="..\..\src\Maximum_Depth_of_Binary_Tree.cpp" />
