--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -120,6 +120,7 @@
     <ClCompile Include="..\..\src\Invert_Binary_Tree.cpp" />
     <ClCompile Include="..\..\src\Jump_Game.cpp" />
     <ClCompile Include="..\..\src\Jump_Game_II.cpp" />
+    <ClCompile Include="..\..\src\Kth_Largest_Element_in_an_Array.cpp" />
     <ClCompile Include="..\..\src\Kth_Smallest_Element_in_a_BST.cpp" />
     <ClCompile Include="..\..\src\Largest_Number.cpp" />
     <ClCompile Include="..\..\src\Largest_Rectangle_in_Histogram.cpp" />
@@ -135,6 +136,7 @@
     <ClCompile Include="..\..\src\Lowest_Common_Ancestor_of_a_Binary_Search_Tree.cpp" />
     <ClCompile Include="..\..\src\Lowest_Common_Ancestor_of_a_Binary_Tree.cpp" />
     <ClCompile Include="..\..\src\LRU_Cache.cpp" />
+    <ClCompile Include="..\..\src\Majority_Element.cpp" />
     <ClCompile Include="..\..\src\Maximal_Rectangle.cpp" />
     <ClCompile Include="..\..\src\Maximum_Depth_of_Binary_Tree.cpp" />
     <ClCompile Include="..\..\src\Maximum_Gap.cpp" />
