Today's share on Array.

--- a/project/VS2010/MyLeetCode.vcxproj.filters
+++ b/project/VS2010/MyLeetCode.vcxproj.filters
@@ -633,6 +633,12 @@
     <ClCompile Include="..\..\src\Find_Minimum_in_Rotated_Sorted_Array_II.cpp">
       <Filter>Source\Arrays</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\src\Find_Peak_Element.cpp">
+      <Filter>Source\Arrays</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\Rotate_Array.cpp">
+      <Filter>Source\Arrays</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\include.h" />
