--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -109,6 +109,7 @@
     <ClCompile Include="..\..\src\Expression_Add_Operators.cpp" />
     <ClCompile Include="..\..\src\Find_Minimum_in_Rotated_Sorted_Array.cpp" />
     <ClCompile Include="..\..\src\Find_Minimum_in_Rotated_Sorted_Array_II.cpp" />
+    <ClCompile Include="..\..\src\Find_Peak_Element.cpp" />
     <ClCompile Include="..\..\src\Find_the_Duplicate_Number.cpp" />
     <ClCompile Include="..\..\src\First_Missing_Positive.cpp" />
     <ClCompile Include="..\..\src\Flatten_Binary_Tree_to_Linked_List.cpp" />
@@ -200,6 +201,7 @@
     <ClCompile Include="..\..\src\Reverse_Vowels_of_a_String.cpp" />
     <ClCompile Include="..\..\src\Reverse_Words_in_a_String.cpp" />
     <ClCompile Include="..\..\src\Roman_to_Integer.cpp" />
+    <ClCompile Include="..\..\src\Rotate_Array.cpp" />
     <ClCompile Include="..\..\src\Rotate_Image.cpp" />
     <ClCompile Include="..\..\src\Rotate_List.cpp" />
     <ClCompile Include="..\..\src\Same_Tree.cpp" />
