--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -90,9 +90,12 @@
     <ClCompile Include="..\..\src\Combinations.cpp" />
     <ClCompile Include="..\..\src\Combination_Sum.cpp" />
     <ClCompile Include="..\..\src\Combination_Sum_II.cpp" />
+    <ClCompile Include="..\..\src\Combination_Sum_III.cpp" />
     <ClCompile Include="..\..\src\Construct_Binary_Tree_from_Inorder_and_Postorder_Traversal.cpp" />
     <ClCompile Include="..\..\src\Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal.cpp" />
     <ClCompile Include="..\..\src\Container_With_Most_Water.cpp" />
+    <ClCompile Include="..\..\src\Contains_Duplicate.cpp" />
+    <ClCompile Include="..\..\src\Contains_Duplicate_II.cpp" />
     <ClCompile Include="..\..\src\Convert_Sorted_Array_to_Binary_Search_Tree.cpp" />
     <ClCompile Include="..\..\src\Convert_Sorted_List_to_Binary_Search_Tree.cpp" />
     <ClCompile Include="..\..\src\Copy_List_with_Random_Pointer.cpp" />
