--- a/project/VS2010/MyLeetCode.vcxproj
+++ b/project/VS2010/MyLeetCode.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="..\..\src\Minimum_Path_Sum.cpp" />
     <ClCompile Include="..\..\src\Minimum_Size_Subarray_Sum.cpp" />
     <ClCompile Include="..\..\src\Minimum_Window_Substring.cpp" />
+    <ClCompile Include="..\..\src\Missing_Number.cpp" />
     <ClCompile Include="..\..\src\Move_Zeros.cpp" />
     <ClCompile Include="..\..\src\N-Queens.cpp" />
     <ClCompile Include="..\..\src\N-Queens_II.cpp" />
@@ -186,6 +187,7 @@
     <ClCompile Include="..\..\src\Populating_Next_Right_Pointers_in_Each_Node_II.cpp" />
     <ClCompile Include="..\..\src\Power_of_Four.cpp" />
     <ClCompile Include="..\..\src\Pow[x_n].cpp" />
+    <ClCompile Include="..\..\src\Product_of_Array_Except_Self.cpp" />
     <ClCompile Include="..\..\src\Recover_Binary_Search_Tree.cpp" />
     <ClCompile Include="..\..\src\Regular_Expression_Matching.cpp" />
     <ClCompile Include="..\..\src\Remove_Duplicates_from_Sorted_Array.cpp" />
